prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: darkheresyfront
  namespace: darkheresy
spec:
  selector:
    matchLabels:
      app: darkheresyfront
  replicas: 1
  template:
    metadata:
      labels:
        app: darkheresyfront
    spec:
      containers:
      - name: darkheresyfront
        image: drateil/dhfrontnginx
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: darkheresyback
  namespace: darkheresy
spec:
  selector:
    matchLabels:
      app: darkheresyback
  replicas: 1
  template:
    metadata:
      labels:
        app: darkheresyback
    spec:
      containers:
      - name: darkheresyback
        image: drateil/darkheresyback
        ports:
        - containerPort: 3080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
