prod/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy: {}
  template:
    metadata:
      labels:
        app: mongo
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: task-pv-claim
      containers:
      - image: mongo
        name: mongo
        resources :
        args: ["--dbpath","/data/db"]
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
