prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: darkheresyfront-service
  namespace: darkheresy
spec:
  selector:
    app: darkheresyfront
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: darkheresyback-service
  namespace: darkheresy
spec:
  selector:
    app: darkheresyback
  ports:
  - port: 3080
    protocol: TCP
    targetPort: 3080
  type: ClusterIP
